--- a/playground/public/index.html
+++ b/playground/public/index.html
@@ -12,6 +12,10 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+    <script src="https://res.cdn.changbaimg.com/-/03f4950cce737ba6/vconsole.min.js"></script>
+    <script>
+      const vConsole = new VConsole()
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
